@@ -4,6 +4,7 @@ launchpad-buildd (156) UNRELEASED; urgency=medium
     Chroot.run.
   * Replace shell_escape function with shlex.quote (Python 3) or pipes.quote
     (Python 2).
+  * Fix handling of null/empty-domain case in generate_pots.
 
  -- Colin Watson <cjwatson@ubuntu.com>  Thu, 09 Nov 2017 12:08:42 +0000
 
